# tasky

./: .env.example  .gitignore  CLAUDE.md  Makefile  Mockup.html  README.md  Task Organization System Summary.md  Technical and Database Spec Merge.md  docker-compose.yml  workspace.sh
.claude/: settings.json
.claude/agents/: implementer.md  planner.md  reviewer.md
.claude/hooks/: format-and-lint.sh
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: auth.py  experiences.py  ingestion.py  prompts.py  proposals.py  tasks.py
backend/app/connectors/: base.py  canvas.py  github.py  gmail.py  slack.py
backend/app/db/: session.py
backend/app/db/migrations/: README.md  env.py
backend/app/db/migrations/versions/: 5675bef00c60_initial_schema.py  a1b2c3d4e5f6_drop_priority.py  b2c3d4e5f6g7_ingestion_refactor.py  c3d4e5f6g7h8_drop_run_source_type.py  d4e5f6g7h8i9_prompt_tables.py
backend/app/jobs/: ingestion_job.py  propose_job.py  run_tracker.py
backend/app/llm/: __init__.py  client.py  context.py  prompt_builder.py  schemas.py
backend/app/models/: __init__.py  base.py  experience.py  ingestion_batch.py  ingestion_run.py  prompt.py  task.py  task_proposal.py  task_status_history.py
backend/app/schemas/: experiences.py  proposals.py  tasks.py
backend/app/services/: experience_service.py  ingestion_service.py  prompt_service.py  proposal_service.py  task_service.py
backend/app/vault/: reader.py
backend/tests/: conftest.py  test_experiences.py  test_ingestion.py  test_ingestion_service.py  test_llm_client.py  test_proposals.py  test_tasks.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  theme.ts
plans/: async-runs-improvements.md  async-runs.md  connected-source-data-blocks.md  prompt-composer.md
vault.example/.obsidian/: workspace.json
vault.example/Monthly/: README.md
vault/Daily/: README.md
(+86 files in other folders)
